fix meal and recipe response
