# swagger/openapi-spec.json
@@ -180,10 +180,18 @@
         ]
       },
       "get": {
-        "operationId": "RecipeController_getRecipes",
+        "operationId": "getRecipes",
         "parameters": [
           {
             "name": "name",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "page",
             "required": false,
             "in": "query",
             "schema": {
@@ -197,10 +205,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/RecipeResponseDto"
-                  }
+                  "$ref": "#/components/schemas/RecipeListResponseDto"
                 }
               }
             }
@@ -368,7 +373,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/MealResponseDto"
+                    "$ref": "#/components/schemas/MealListItemResponseDto"
                   }
                 }
               }
@@ -524,6 +529,36 @@
           "name"
         ]
       },
+      "PaginatedDto": {
+        "type": "object",
+        "properties": {
+          "total": {
+            "type": "number"
+          },
+          "limit": {
+            "type": "number"
+          },
+          "totalPages": {
+            "type": "number"
+          },
+          "pageNum": {
+            "type": "number"
+          },
+          "items": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        },
+        "required": [
+          "total",
+          "limit",
+          "totalPages",
+          "pageNum",
+          "items"
+        ]
+      },
       "CreateRecipeDto": {
         "type": "object",
         "properties": {
@@ -595,6 +630,53 @@
           "content",
           "img_url",
           "ingredientIds"
+        ]
+      },
+      "RecipeListItemResponseDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "1"
+          },
+          "name": {
+            "type": "string",
+            "example": "Egg soup"
+          }
+        },
+        "required": [
+          "id",
+          "name"
+        ]
+      },
+      "RecipeListResponseDto": {
+        "type": "object",
+        "properties": {
+          "total": {
+            "type": "number"
+          },
+          "limit": {
+            "type": "number"
+          },
+          "totalPages": {
+            "type": "number"
+          },
+          "pageNum": {
+            "type": "number"
+          },
+          "items": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RecipeListItemResponseDto"
+            }
+          }
+        },
+        "required": [
+          "total",
+          "limit",
+          "totalPages",
+          "pageNum",
+          "items"
         ]
       },
       "UpdateRecipeDto": {
@@ -692,6 +774,59 @@
           "date",
           "type",
           "recipe_ids"
+        ]
+      },
+      "MealItemResponseDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "1"
+          },
+          "recipe_names": {
+            "example": [
+              "bun",
+              "com"
+            ],
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "recipe_names"
+        ]
+      },
+      "MealListItemResponseDto": {
+        "type": "object",
+        "properties": {
+          "date": {
+            "type": "string",
+            "example": "2025-08-01"
+          },
+          "lunch": {
+            "nullable": true,
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/MealItemResponseDto"
+              }
+            ]
+          },
+          "dinner": {
+            "nullable": true,
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/MealItemResponseDto"
+              }
+            ]
+          }
+        },
+        "required": [
+          "date",
+          "lunch",
+          "dinner"
         ]
       },
       "UpdateMealDto": {
